tests222/tests/test37.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: variable readi is not defined
^
